# CLI-Covid-Thesis

./: README.md  config.json  requirements.txt  setup.cfg  setup.py  test.py
data/: population.txt
data/hospi/: be-covid-hospi.csv  fr-covid-hospi.csv  world.csv
data/trends/: collectFR-A-Fièvre.csv
data/trends/model/: BE-Allergy.csv  BE-COVID 19 testing.csv  BE-COVID 19 vaccine.csv  BE-Coronavirus disease 2019.csv  BE-Cure.csv  BE-Fièvre.csv  BE-Mal de gorge.csv  BE-PCR.csv  BE-Symptôme.csv  BE-Toux.csv  BE-Vaccination.csv  BE-Virus.csv  FR-A-Allergy.csv  FR-A-COVID 19 testing.csv  FR-A-COVID 19 vaccine.csv  FR-A-Coronavirus disease 2019.csv  FR-A-Cure.csv  FR-A-Fièvre.csv  FR-A-Mal de gorge.csv  FR-A-PCR.csv  FR-A-Symptôme.csv  FR-A-Toux.csv  FR-A-Vaccination.csv  FR-A-Virus.csv  FR-B-Allergy.csv  FR-B-COVID 19 testing.csv  FR-B-COVID 19 vaccine.csv  FR-B-Coronavirus disease 2019.csv  FR-B-Cure.csv  FR-B-Fièvre.csv  FR-B-Mal de gorge.csv  FR-B-PCR.csv  FR-B-Symptôme.csv  FR-B-Toux.csv  FR-B-Vaccination.csv  FR-B-Virus.csv  FR-C-Allergy.csv  FR-C-COVID 19 testing.csv  FR-C-COVID 19 vaccine.csv  FR-C-Coronavirus disease 2019.csv  (+235 more)
models/: dense_dg_param.json  dense_merged_df.p  dense_model.h5  simple-auto-encoder_dg_param.json  simple-auto-encoder_model
src/covid_predictor/: CheckCollection.py  CheckPrediction.py  DataGenerator.py  check_input.py  cli.py  collector.py  data_collection.py  prediction.py  predictor.py  training.py  unit_test.py  utils.py
src/covid_predictor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
