[metadata]
name = covid_predictor
author = Margaux Gerard
author_email = margaux.gerard@accenture.com
description = Covid predictor
long_descripion = file:README.md
provides =
    covid_predictor
; can't use this as we are setting requirements in setup.py which breaks the wheel
; requires-dist = setuptools

[options]
setup_requires =
    setuptools
package_dir =
    =src
packages = find_namespace:
python_requires = >=3

[options.entry_points]
console_scripts =
	covid-predictor=covid_predictor.cli:predictor

[options.package_data]
* =  requirements.txt
     *.cfg

[options.packages.find]
where=src